# gfxtut

./: .gitignore  CMakeLists.txt  LICENSE  README.md
01.misc/: CMakeLists.txt  README.md
01.misc/01.desktop_window/: CMakeLists.txt  README.md  glfw.cpp  glfw.hpp  main.cpp  scope_exit.hpp
cmake_mod/: glfw.cmake
